[project]
name = "project-s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlib>=20.0.1",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "opencv-python>=4.13.0.92",
    "pygame>=2.6.1",
    "setuptools<81",
]
